--- a/Analysis/Script_Figure_3_Joint_Admixture_Dating_Analysis.Rmd
+++ b/Analysis/Script_Figure_3_Joint_Admixture_Dating_Analysis.Rmd
@@ -15,19 +15,29 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Functions
 
 ```{r eval=T,echo=F,results='hide'}
-source("~/EMH_Introgression_Project/Introgression_Detection/scripts/Analysis_R_functions.R")
+source("Analysis_R_functions.R")
 ```
 
 ## Meta Data
 
 ```{r eval=T,echo=F,results='hide'}
-# folder
-folder_path = "~/EMH_Introgression_Project/Introgression_Detection/Preliminary_figures_Updates_admixfrog0.7/"
+############## change path  ##################
+folder_path = "Paper_figures"
 
-folder_path_data = "/home/leonardo_iasi/EMH_Introgression_Project/Introgression_Detection/Preliminary_Paper_Figures_Data/"
+folder_path_data = "Paper_figures_Data/"
 
-Joint_Meta <- read.csv("~/EMH_Introgression_Project/Introgression_Detection/Joint_Meta_data_genetic_clusters_using_1240k.csv") %>% 
-  filter(sample_name != "Mota",SuperclusterF3D != "Africa") %>% mutate(sample_name=gsub( "-", ".", sample_name))
+folder_path_Sup_Tables = "Supplements_Tables/"
+
+path_to_dryad_downloaded_files = "Dryad_folder"
+
+path_to_my_admixfrog_folder_ancient = "Admixfrog_res_ancient"
+
+path_to_my_admixfrog_folder_present = "Admixfrog_res_present"
+##############################################
+
+Joint_Meta <- read.csv(paste0(path_to_dryad_downloaded_files,"Meta_Data_individuals.csv")) %>% 
+  filter(sample_name != "Mota",superpopulation_cluster != "Africa") %>% mutate(sample_name=gsub( "-", ".", sample_name))
+
 
 cluster_color_broad_all = data.frame(clusterF3D_broad_all = c("AncientEAS","ANE","ANS","EarlyOoA","EAS","North_Africa","postLGM-WEurHG","preLGM-WEurHG","SA","Sahul","Satsurblia","Siberia&Americas" ,"Sub-Sahara-Africa","SWA","WEur","Yamnaya"),
                                      cluster_color = 
@@ -65,12 +75,12 @@ Archeaology_last_neandertals = min(c(Chatelperronian_extinction,Neandertal_extin
 
 ## Simulations under the model
 
-We used a snakemake script to do the simulation that calls 4 different R scripts. Parameters are read in from a yaml file.
+We used a snakemake script to do the simulation that calls 3 different R scripts. Parameters are read in from a yaml file. You can find the scripts in the Dating Neandertal ancestry folder on github in the Simulatiin folder.
 
 ```{r eval=T,echo=F, result='hide'}
 
 
-path_SP <- list.files(path = "/mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis/Test_Sim/",pattern = "SP_sim_",full.names = T)
+path_SP <- list.files(path = "EMH_dating_analysis/Test_Sim/",pattern = "SP_sim_",full.names = T)
 
 for(i in 1:length(path_SP)){
   load(path_SP[i])
@@ -102,7 +112,7 @@ SP_res_matrix_all <- rbind(SP_res_matrix_all_Segfit,SP_res_matrix_all_ACov_fit_L
 rm(Sp_ACov_res,Sp_seg_res,res_matrix_Segfit,res_matrix_ACov_fit_LL,SP_res_matrix_all_Segfit,SP_res_matrix_all_ACov_fit_LL)
 
 
-path_TP <- list.files(path = "/mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis/Test_Sim/",pattern = "TP_sim_",full.names = T)
+path_TP <- list.files(path = "EMH_dating_analysis/Test_Sim/",pattern = "TP_sim_",full.names = T)
 
 for(i in 1:length(path_TP)){
   load(path_TP[i])
@@ -133,7 +143,7 @@ TP_res_matrix_all <- rbind(TP_res_matrix_all_Segfit,TP_res_matrix_all_ACov_fit_L
 rm(Sp_ACov_res,Sp_seg_res,res_matrix_Segfit,res_matrix_ACov_fit_LL,TP_res_matrix_all_Segfit,TP_res_matrix_all_ACov_fit_LL)
 
 
-path_EP_1600_400 <- list.files(path = "/mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis/Test_Sim/",pattern = "EP_sim_0.015_tm_td_comb_1600_400",full.names = T)
+path_EP_1600_400 <- list.files(path = "EMH_dating_analysis/Test_Sim/",pattern = "EP_sim_0.015_tm_td_comb_1600_400",full.names = T)
 
 for(i in 1:length(path_EP_1600_400)){
   load(path_EP_1600_400[i])
@@ -163,7 +173,7 @@ EP_all_res_1600_400 = EP_all_res
 EP_res_matrix_all_1600_400 <- rbind(EP_res_matrix_all_Segfit,EP_res_matrix_all_ACov_fit_LL)
 rm(Sp_ACov_res,Sp_seg_res,res_matrix_Segfit,res_matrix_ACov_fit_LL,EP_res_matrix_all_Segfit,EP_res_matrix_all_ACov_fit_LL)
 
-path_EP_1600_1 <- list.files(path = "/mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis/Test_Sim/",pattern = "EP_sim_0.015_tm_td_comb_1600_1",full.names = T)
+path_EP_1600_1 <- list.files(path = "EMH_dating_analysis/Test_Sim/",pattern = "EP_sim_0.015_tm_td_comb_1600_1",full.names = T)
 
 for(i in 1:length(path_EP_1600_1)){
   load(path_EP_1600_1[i])
@@ -194,7 +204,7 @@ EP_res_matrix_all_1600_1 <- rbind(EP_res_matrix_all_Segfit,EP_res_matrix_all_ACo
 rm(Sp_ACov_res,Sp_seg_res,res_matrix_Segfit,res_matrix_ACov_fit_LL,EP_res_matrix_all_Segfit,EP_res_matrix_all_ACov_fit_LL)
 
 
-path_EP_1600_200 <- list.files(path = "/mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis/Test_Sim/",pattern = "EP_sim_0.015_tm_td_comb_1600_200",full.names = T)
+path_EP_1600_200 <- list.files(path = "EMH_dating_analysis/Test_Sim/",pattern = "EP_sim_0.015_tm_td_comb_1600_200",full.names = T)
 
 for(i in 1:length(path_EP_1600_200)){
   load(path_EP_1600_200[i])
@@ -224,7 +234,7 @@ EP_all_res_1600_200 = EP_all_res
 EP_res_matrix_all_1600_200 <- rbind(EP_res_matrix_all_Segfit,EP_res_matrix_all_ACov_fit_LL)
 rm(Sp_ACov_res,Sp_seg_res,res_matrix_Segfit,res_matrix_ACov_fit_LL,EP_res_matrix_all_Segfit,EP_res_matrix_all_ACov_fit_LL)
 
-path_EP_1700_400 <- list.files(path = "/mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis/Test_Sim/",pattern = "EP_sim_0.015_tm_td_comb_1700_400",full.names = T)
+path_EP_1700_400 <- list.files(path = "EMH_dating_analysis/Test_Sim/",pattern = "EP_sim_0.015_tm_td_comb_1700_400",full.names = T)
 
 for(i in 1:length(path_EP_1700_400)){
   load(path_EP_1700_400[i])
@@ -254,7 +264,7 @@ EP_all_res_1700_400  = EP_all_res
 EP_res_matrix_all_1700_400  <- rbind(EP_res_matrix_all_Segfit,EP_res_matrix_all_ACov_fit_LL)
 rm(Sp_ACov_res,Sp_seg_res,res_matrix_Segfit,res_matrix_ACov_fit_LL,EP_res_matrix_all_Segfit,EP_res_matrix_all_ACov_fit_LL)
 
-path_EP_1800_600 <- list.files(path = "/mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis/Test_Sim/",pattern = "EP_sim_0.015_tm_td_comb_1800_600",full.names = T)
+path_EP_1800_600 <- list.files(path = "EMH_dating_analysis/Test_Sim/",pattern = "EP_sim_0.015_tm_td_comb_1800_600",full.names = T)
 
 for(i in 1:length(path_EP_1800_600)){
   load(path_EP_1800_600[i])
@@ -285,7 +295,7 @@ EP_res_matrix_all_1800_600  <- rbind(EP_res_matrix_all_Segfit,EP_res_matrix_all_
 rm(Sp_ACov_res,Sp_seg_res,res_matrix_Segfit,res_matrix_ACov_fit_LL,EP_res_matrix_all_Segfit,EP_res_matrix_all_ACov_fit_LL)
 
 
-path_EP_1900_800 <- list.files(path = "/mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis/Test_Sim/",pattern = "EP_sim_0.015_tm_td_comb_1900_800",full.names = T)
+path_EP_1900_800 <- list.files(path = "EMH_dating_analysis/Test_Sim/",pattern = "EP_sim_0.015_tm_td_comb_1900_800",full.names = T)
 
 for(i in 1:length(path_EP_1900_800)){
   load(path_EP_1900_800[i])
@@ -315,7 +325,7 @@ EP_all_res_1900_800 = EP_all_res
 EP_res_matrix_all_1900_800  <- rbind(EP_res_matrix_all_Segfit,EP_res_matrix_all_ACov_fit_LL)
 rm(Sp_ACov_res,Sp_seg_res,res_matrix_Segfit,res_matrix_ACov_fit_LL,EP_res_matrix_all_Segfit,EP_res_matrix_all_ACov_fit_LL)
 
-path_EP_2000_1000 <- list.files(path = "/mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis/Test_Sim/",pattern = "EP_sim_0.015_tm_td_comb_2000_1000",full.names = T)
+path_EP_2000_1000 <- list.files(path = "EMH_dating_analysis/Test_Sim/",pattern = "EP_sim_0.015_tm_td_comb_2000_1000",full.names = T)
 
 for(i in 1:length(path_EP_2000_1000)){
   load(path_EP_2000_1000[i])
@@ -367,16 +377,18 @@ write.csv(P_EP_fit_res_D_Data,paste0(folder_path_data,"P_EP_fit_res_D_Data.csv")
 
 ## Estimating Jackknife se by chrom for SP
 
+All input files here are obtained by running the Dating_Snakemake_pipeline.py script.
+
 ```{r eval=T,echo=F, result='hide'}
 
 
 ## ACov
 
-JK_ACov <- read.csv("~/EMH_Introgression_Project/Introgression_Detection/Coancestry_Curves_Dating/ACov_Datinf_asc.snp",sep=" ",header = F) %>% 
+JK_ACov <- read.csv("Dating_Results/ACov_Datinf_asc.snp",sep=" ",header = F) %>% 
   dplyr::select(V1,V2) %>% group_by(V1) %>% dplyr::summarize(n_pos = n())
 
 
-SP_Acov <- read.csv("/mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis_res_updated_red/Fit_data_tm_step_1_td_step_1/Results/All_ACov_SP_res_merged_ACov_Run_SP.csv") %>% mutate( JK = ifelse(JKchrom == "All", F,T), exclude = ifelse(exclude == "", "All_Data", exclude)) 
+SP_Acov <- read.csv("Dating_Results/Fit_data_tm_step_1_td_step_1/Results/All_ACov_SP_res_merged_ACov_Run_SP.csv") %>% mutate( JK = ifelse(JKchrom == "All", F,T), exclude = ifelse(exclude == "", "All_Data", exclude)) 
 
 ACov_Run_SP_JKchrom_mean_out <- list()
 est = unique(SP_Acov[,c("truncation","weighted","exclude")])
@@ -387,11 +399,11 @@ for(i in 1:length(est$truncation)){
     inner_join(.,JK_ACov,by=c("JKchrom"="V1"))
   ACov_Run_SP_JKchrom_mean <- SP_Acov %>% filter(truncation == est$truncation[i], weighted == est$weighted[i], exclude == est$exclude[i], JK == F) 
   
-  write.table(x = data.frame(ACov_Run_SP_JKchrom_summary$JKchrom,ACov_Run_SP_JKchrom_summary$n_pos,ACov_Run_SP_JKchrom_summary$tm),file = paste0("/mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis_res_updated_red/Fit_data_tm_step_1_td_step_1/JKResults/ACov_Run_EP_JKchrom_sum_tm_",est$truncation[i],"_",est$weighted[i],"_",est$exclude[i],".jin"),quote = F,row.names = F,col.names = F)
+  write.table(x = data.frame(ACov_Run_SP_JKchrom_summary$JKchrom,ACov_Run_SP_JKchrom_summary$n_pos,ACov_Run_SP_JKchrom_summary$tm),file = paste0("Dating_Results/Fit_data_tm_step_1_td_step_1/JKResults/ACov_Run_EP_JKchrom_sum_tm_",est$truncation[i],"_",est$weighted[i],"_",est$exclude[i],".jin"),quote = F,row.names = F,col.names = F)
 
-  system(paste0("~/DATES/src/./dowtjack -i /mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis_res_updated_red/Fit_data_tm_step_1_td_step_1/JKResults/ACov_Run_EP_JKchrom_sum_tm_",est$truncation[i],"_",est$weighted[i],"_",est$exclude[i],".jin -m ",ACov_Run_SP_JKchrom_mean$tm," -o /mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis_res_updated_red/Fit_data_tm_step_1_td_step_1/JKResults/ACov_Run_EP_JKchrom_sum_tm_",est$truncation[i],"_",est$weighted[i],"_",est$exclude[i],".jout"))
+  system(paste0("~/DATES/src/./dowtjack -i Dating_Results/Fit_data_tm_step_1_td_step_1/JKResults/ACov_Run_EP_JKchrom_sum_tm_",est$truncation[i],"_",est$weighted[i],"_",est$exclude[i],".jin -m ",ACov_Run_SP_JKchrom_mean$tm," -o Dating_Results/Fit_data_tm_step_1_td_step_1/JKResults/ACov_Run_EP_JKchrom_sum_tm_",est$truncation[i],"_",est$weighted[i],"_",est$exclude[i],".jout"))
 
-  tm_SE_est_SP <- read.table(paste0("/mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis_res_updated_red/Fit_data_tm_step_1_td_step_1/JKResults/ACov_Run_EP_JKchrom_sum_tm_",est$truncation[i],"_",est$weighted[i],"_",est$exclude[i],".jout"))
+  tm_SE_est_SP <- read.table(paste0("Dating_Results/Fit_data_tm_step_1_td_step_1/JKResults/ACov_Run_EP_JKchrom_sum_tm_",est$truncation[i],"_",est$weighted[i],"_",est$exclude[i],".jout"))
   ACov_Run_SP_JKchrom_mean_out[[i]] <- ACov_Run_SP_JKchrom_mean %>% mutate(mean_JK = tm_SE_est_SP[1,1],se_JK = tm_SE_est_SP[1,2])
 
 }
@@ -402,15 +414,15 @@ SP_Acov_anno <- do.call("rbind",ACov_Run_SP_JKchrom_mean_out) %>%
   dplyr::rename(weighted = weighted2) %>% 
   filter(map == "Shared_Map")
 
-write.table(SP_Acov_anno,"/mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis_res_updated_red/Fit_data_tm_step_1_td_step_1/Results/All_ACov_SP_res_merged_ACov_Run_SP_annotated.csv",quote = F,row.names = F,sep=",")
+write.table(SP_Acov_anno,"Dating_Results/Fit_data_tm_step_1_td_step_1/Results/All_ACov_SP_res_merged_ACov_Run_SP_annotated.csv",quote = F,row.names = F,sep=",")
 
 ## Seg
 
-JK_segments <- read.csv("~/EMH_Introgression_Project/Introgression_Detection/admixfrogREF/ref/published/EMHPanel/Shared_Map/ref_archaicadmixtureAPX_hs37mMask35to99.csv.xz") %>%
+JK_segments <- read.csv(paste0(path_to_dryad_downloaded_files,"/ref_archaicadmixtureAPX_hs37mMask35to99.csv.xz")) %>%
   filter(chrom != "X") %>%
   group_by(chrom) %>% dplyr::summarize(chrom_start = min(pos),chrom_end = max(pos)) %>% mutate(chrom_length = chrom_end - chrom_start)
 
-SP_Seg <- read.csv("/mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis_res_updated_red/Fit_data_tm_step_1_td_step_1/Results/All_Seg_SP_res_merged_Seg_Run_SP.csv") %>% 
+SP_Seg <- read.csv("Dating_Results/Fit_data_tm_step_1_td_step_1/Results/All_Seg_SP_res_merged_Seg_Run_SP.csv") %>% 
   mutate( JK = ifelse(JKchrom == "All", F,T), exclude = ifelse(exclude == "", "All_Data", exclude)) 
 
 Seg_Run_SP_JKchrom_mean_out <- list()
@@ -421,11 +433,11 @@ for(i in 1:length(est$min_l)){
     inner_join(.,JK_segments,by=c("JKchrom"="chrom"))
   Seg_Run_SP_JKchrom_mean <- SP_Seg %>% filter(exclude == est$exclude[i], min_l == est$min_l[i],JK == F)
   
-  write.table(x = data.frame(Seg_Run_SP_JKchrom_summary$JKchrom,Seg_Run_SP_JKchrom_summary$chrom_length,Seg_Run_SP_JKchrom_summary$tm),file = paste0("/mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis_res_updated_red/Fit_data_tm_step_1_td_step_1/JKResults/Seg_Run_EP_JKchrom_sum_tm_",est$min_l[i],"_",est$exclude[i],".jin"),quote = F,row.names = F,col.names = F)
+  write.table(x = data.frame(Seg_Run_SP_JKchrom_summary$JKchrom,Seg_Run_SP_JKchrom_summary$chrom_length,Seg_Run_SP_JKchrom_summary$tm),file = paste0("Dating_Results/Fit_data_tm_step_1_td_step_1/JKResults/Seg_Run_EP_JKchrom_sum_tm_",est$min_l[i],"_",est$exclude[i],".jin"),quote = F,row.names = F,col.names = F)
 
-  system(paste0("~/DATES/src/./dowtjack -i /mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis_res_updated_red/Fit_data_tm_step_1_td_step_1/JKResults/Seg_Run_EP_JKchrom_sum_tm_",est$min_l[i],"_",est$exclude[i],".jin -m ",Seg_Run_SP_JKchrom_mean$tm," -o /mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis_res_updated_red/Fit_data_tm_step_1_td_step_1/JKResults/Seg_Run_EP_JKchrom_sum_tm_",est$min_l[i],"_",est$exclude[i],".jout"))
+  system(paste0("~/DATES/src/./dowtjack -i Dating_Results/Fit_data_tm_step_1_td_step_1/JKResults/Seg_Run_EP_JKchrom_sum_tm_",est$min_l[i],"_",est$exclude[i],".jin -m ",Seg_Run_SP_JKchrom_mean$tm," -o Dating_Results/Fit_data_tm_step_1_td_step_1/JKResults/Seg_Run_EP_JKchrom_sum_tm_",est$min_l[i],"_",est$exclude[i],".jout"))
 
-  tm_SE_est_SP <- read.table(paste0("/mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis_res_updated_red/Fit_data_tm_step_1_td_step_1/JKResults/Seg_Run_EP_JKchrom_sum_tm_",est$min_l[i],"_",est$exclude[i],".jout"))
+  tm_SE_est_SP <- read.table(paste0("Dating_Results/Fit_data_tm_step_1_td_step_1/JKResults/Seg_Run_EP_JKchrom_sum_tm_",est$min_l[i],"_",est$exclude[i],".jout"))
   Seg_Run_SP_JKchrom_mean_out[[i]] <- Seg_Run_SP_JKchrom_mean %>% mutate(mean_JK = tm_SE_est_SP[1,1],se_JK = tm_SE_est_SP[1,2])
 
 }
@@ -434,61 +446,20 @@ SP_Seg_anno <- do.call("rbind",Seg_Run_SP_JKchrom_mean_out) %>%
   mutate(LL = -LL,min_l = as.factor(min_l)) %>%
   dplyr::select(tm,mean_JK,se_JK,tm_lower,tm_upper,LL,map,min_l,exclude)  %>% filter(map == "Shared_Map")
 
-write.csv(SP_Seg_anno,"/mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis_res_updated_red/Fit_data_tm_step_1_td_step_1/Results/All_Seg_SP_res_merged_Seg_Run_SP_annotated.csv",quote = F,row.names = F)
+write.csv(SP_Seg_anno,"Dating_Results/Fit_data_tm_step_1_td_step_1/Results/All_Seg_SP_res_merged_Seg_Run_SP_annotated.csv",quote = F,row.names = F)
 ```
 
-## Estimating Jackknife se by chrom for EP
-
-This seems to return strange SE where the estimated mean is not found in the range of the jackknifed values
-
-```{r eval=T,echo=F, result='hide'}
-JK_segments <- read.csv("~/EMH_Introgression_Project/Introgression_Detection/admixfrogREF/ref/published/EMHPanel/Shared_Map/ref_archaicadmixtureAPX_hs37mMask35to99.csv.xz") %>%
-  filter(chrom != "X") %>%
-  group_by(chrom) %>% dplyr::summarize(chrom_start = min(pos),chrom_end = max(pos)) %>% mutate(chrom_length = chrom_end - chrom_start)
-
-JK_ACov <- read.csv("~/EMH_Introgression_Project/Introgression_Detection/Coancestry_Curves_Dating/ACov_Datinf_asc.snp",sep=" ",header = F) %>% 
-  dplyr::select(V1,V2) %>% group_by(V1) %>% dplyr::summarize(n_pos = n())
-
-
-ACov_Run_EP_JKchrom <- read.csv("/mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis_res_updated_red/Data_JKchrom/Results/All_ACov_EP_res_merged_ACov_Run_EP_JKchrom.csv")
-
-ACov_Run_EP  <- read.csv("/mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis_res_updated_red/Fit_Data_10_10_steps/Results/All_ACov_EP_res_merged_ACov_Run_EP.csv") %>% 
-  mutate(exclude2 = ifelse(exclude == "", "All Data",ifelse(startsWith(exclude,"BKBB7240_BKF6620"), "EarlyOoA Excluded",ifelse(exclude == "OaseNew","Oase Excluded",ifelse(startsWith(exclude,"OaseNew_PM1"),"Only EarlyOoA w/o Oase","Only EarlyOoA"))))) %>%   
-  filter(min_l == 0.02, weighted == "yes", 
-         truncation == "estimated_truncation",
-         map == "Shared_Map",
-         exclude2 %in% c("EarlyOoA Excluded")) %>% filter(value0 == 0)
-
-ACov_Run_EP_JKchrom_summary <- ACov_Run_EP_JKchrom %>% group_by(JKchrom,exclude) %>% filter(value0 == 0) %>% ungroup() %>% inner_join(.,JK_ACov,by=c("JKchrom"="V1"))
-
-## estimate SE tm 
-
-write.table(x = data.frame(ACov_Run_EP_JKchrom_summary$JKchrom,ACov_Run_EP_JKchrom_summary$n_pos,ACov_Run_EP_JKchrom_summary$Var2),"~/EMH_Introgression_Project/Introgression_Detection/Coancestry_Curves_Dating/ACov_Run_EP_JKchrom_sum_tm.jin",quote = F,row.names = F,col.names = F)
-
-system(paste0("~/DATES/src/./dowtjack -i ~/EMH_Introgression_Project/Introgression_Detection/Coancestry_Curves_Dating/ACov_Run_EP_JKchrom_sum_tm.jin -m ",ACov_Run_EP$Var2," -o ~/EMH_Introgression_Project/Introgression_Detection/Coancestry_Curves_Dating/ACov_Run_EP_JKchrom_sum_tm.jout"))
-
-tm_SE_est_EP <- read.table("~/EMH_Introgression_Project/Introgression_Detection/Coancestry_Curves_Dating/ACov_Run_EP_JKchrom_sum_tm.jout")
-
-## estimate SE td 
-
-write.table(x = data.frame(ACov_Run_EP_JKchrom_summary$JKchrom,ACov_Run_EP_JKchrom_summary$n_pos,ACov_Run_EP_JKchrom_summary$Var1),"~/EMH_Introgression_Project/Introgression_Detection/Coancestry_Curves_Dating/ACov_Run_EP_JKchrom_sum_td.jin",quote = F,row.names = F,col.names = F)
-
-system(paste0("~/DATES/src/./dowtjack -i ~/EMH_Introgression_Project/Introgression_Detection/Coancestry_Curves_Dating/ACov_Run_EP_JKchrom_sum_td.jin -m ",as.numeric(ACov_Run_EP$Var1)," -o ~/EMH_Introgression_Project/Introgression_Detection/Coancestry_Curves_Dating/ACov_Run_EP_JKchrom_sum_td.jout"))
-
-td_SE_est_EP <- read.table("~/EMH_Introgression_Project/Introgression_Detection/Coancestry_Curves_Dating/ACov_Run_EP_JKchrom_sum_td.jout")
-
-```
 
 
 Estimating it from the range of LL being bigger than -2
 
 
 ```{r eval=T,echo=F, result='hide'}
-ACov_Run_EP  <- read.csv("/mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis_res_updated_red/Fit_data_tm_step_1_td_step_1/Results/All_ACov_EP_res_merged_ACov_Run_EP.csv") %>% 
+ACov_Run_EP  <- read.csv("Dating_Results/Fit_data_tm_step_1_td_step_1/Results/All_ACov_EP_res_merged_ACov_Run_EP.csv") %>% 
   mutate(exclude2 = ifelse(exclude == "", "All Data",ifelse(startsWith(exclude,"BKBB7240_BKF6620"), "EarlyOoA Excluded",ifelse(exclude == "OaseNew","Oase Excluded",ifelse(startsWith(exclude,"OaseNew_PM1"),"Only EarlyOoA w/o Oase","Only EarlyOoA"))))) 
   group_by(truncation,exclude,min_l,map,weighted) %>% filter(value0 > -101) 
 
-write.csv(x=ACov_Run_EP,file = "/mnt/diversity/leonardo_iasi/EMH_Introgression_Project/EMH_dating_analysis_res_updated_red/Fit_data_tm_step_1_td_step_1/Results/All_ACov_EP_res_merged_ACov_Run_EP_reduced.csv",quote = F,row.names = F)
+write.csv(x=ACov_Run_EP,file = "Dating_Results/Fit_data_tm_step_1_td_step_1/Results/All_ACov_EP_res_merged_ACov_Run_EP_reduced.csv",quote = F,row.names = F)
 
 ACov_Run_EP_summary <- ACov_Run_EP %>% group_by(truncation,exclude,min_l,map,weighted) %>% filter(value0 == 0) %>% ungroup()
 
